WIP update App component to remove comments from instance methods, update stylesheet for colour of labels and sizing of text. Looks ok on mobile but still has initial sizing issue to resolve

--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,9 @@
   height: 75%;
 }
 
-.subunit.ISL { fill: #dcd; }
+.subunit.ISL {
+  fill: #dcd;
+}
 
 .subunit-boundary {
   fill: none;
@@ -34,9 +36,17 @@
 .subunit-label {
   fill: #777;
   fill-opacity: .5;
-  font-size: 20px;
+  font-size: 1.2em;
   font-weight: 300;
   text-anchor: middle;
+  font-family: sans-serif;
+}
+
+.place-label {
+  fill: #111;
+  fill-opacity: .5;
+  font-size: 1em;
+  font-weight: 300;
   font-family: sans-serif;
 }
 
